<resources>
    <string name="app_name">Academy DI</string>

    <!-- Images Descriptions -->
    <string name="desc_movie_image">Movie image</string>
    <string name="desc_add_to_favorites">Add to favorites</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_favorites">Favorites</string>

    <!-- Fragment Titles -->
    <string name="fragment_title_home">DI Workshop - Home</string>
    <string name="fragment_title_details">Movie Details</string>
    <string name="fragment_title_settings">Settings</string>

    <!-- Settings Fragment-->
    <string name="minimum_votes">Minimum votes:</string>
    <string name="minimum_rating">Minimum rating:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <!-- Unsorted -->
    <string name="fake_string_res">fake</string>

</resources>