<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.academy.di.ui.home.HomeFragment"
        android:label="@string/fragment_title_home"
        tools:layout="@layout/home_fragment">
        <action
            android:id="@+id/action_homeFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.academy.di.ui.details.DetailsFragment"
        android:label="@string/fragment_title_details"
        tools:layout="@layout/details_fragment">
        <argument
            android:name="movie"
            app:argType="com.academy.db.model.Movie" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.academy.di.ui.settings.SettingsFragment"
        android:label="@string/fragment_title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>