<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.settings.SettingsFragment">


    <TextView
        android:id="@+id/tvMinVotesDesc"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/settings_line_height"
        android:gravity="center"
        android:text="@string/minimum_votes"
        android:textSize="@dimen/settings_text_size"
        app:layout_constraintEnd_toStartOf="@id/tvMinVotesValue"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMinVotesValue"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/settings_line_height"
        android:gravity="center"
        android:paddingStart="12dp"
        android:textSize="@dimen/settings_text_size"
        app:layout_constraintEnd_toStartOf="@id/btnMinus"
        app:layout_constraintStart_toEndOf="@id/tvMinVotesDesc"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry"
        tools:text="2" />

    <Button
        android:id="@+id/btnMinus"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="@dimen/settings_line_height"
        android:paddingStart="20dp"
        android:text="@string/minus"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@id/btnPlus"
        app:layout_constraintStart_toEndOf="@id/tvMinVotesValue"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/btnPlus"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="50dp"
        android:layout_height="@dimen/settings_line_height"
        android:text="@string/plus"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnMinus"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>